--- a/orga/translations/en.json
+++ b/orga/translations/en.json
@@ -329,6 +329,26 @@
         "row-title": "Student"
       },
       "title": "Students"
+    },
+    "team-new": {
+      "title": "Invite a member",
+      "email-requirement": "Enter here the email address of the member you want to invite.",
+      "several-email-requirement": "Invite several members by separating the email addresses with commas.",
+      "invited-members": "By clicking on the link provided in the invitation, the invited members will be able to create an account or log in with an existing Pix account.",
+      "errors": {
+        "default": "The service is temporarily unavailable. Please try again later.",
+        "status" : {
+          "400": "The email address format is invalid.",
+          "412": "This member has already been added.",
+          "404": "This email address doesn't match any Pix user.",
+          "500": "Something went wrong. Please try again."
+        }
+      }
+    },
+    "team-new-item": {
+      "input-label": "Email address(es)",
+      "cancel-button": "Cancel",
+      "invite-button": "Invite"
     }
   }
 }
