--- a/api/translations/en.json
+++ b/api/translations/en.json
@@ -1,23 +1,48 @@
 {
   "current-lang" : "en",
-  "campaign" : {
-    "common" :{
-      "yes": "Yes",
-      "no": "No",
-      "not-available": "NA"
+  "campaign-export" : {
+    "assessment": {
+      "competence-area": {
+        "items-successfully-completed": "Items of the target profile successfully completed in the competence area {{name}}",
+        "mastery-percentage": "% of items successfully completed in the competence area {{name}}",
+        "total-items": "Number of items of the target profile in the competence area {{name}}"
+      },
+      "is-shared": "Shared (Y/N)",
+      "mastery-percentage-target-profile":"% of items successfully completed in the target profile",
+      "progress": "% of progression",
+      "shared-on": "Shared on",
+      "started-on": "Started on",
+      "target-profile-name": "Target profile’s name",
+      "status": {
+        "ko": "KO",
+        "not-tested": "Not tested",
+        "ok": "OK"
+      },  
+      "skill": {
+        "items-successfully-completed": "Items of the target profile successfully completed in the skill {{name}}",
+        "mastery-percentage": "% of items successfully completed in the skill {{name}}",
+        "total-items": "Number of items of the target profile in the skill {{name}}"
+      },
+      "success-rate": "Success rate (/{{value}})",
+      "thematic-result-name": "{{name}} (Y/N)"
     },
-    "profiles-collection" : {
+    "common" :{
       "campaign-id": "Campaign ID",
       "campaign-name": "Campaign's name",
-      "certifiable-skills": "Number of skills eligible for certification",
       "file-name": "Results-{{name}}-{{id}}-{{date}}.csv",
-      "is-certifiable" :"Eligible for certification (Y/N)",
-      "is-sent": "Sent (Y/N)",
+      "no": "No",
+      "not-available": "NA",
+      "organization-name": "Organisation’s name",
       "participant-division": "Class",
       "participant-firstname": "Participant's first name",
       "participant-lastname": "Participant's last name",
       "participant-student-number": "Student number",
-      "organization-name": "Organisation’s name",
+      "yes": "Yes"  
+    },
+    "profiles-collection" : {
+      "certifiable-skills": "Number of skills eligible for certification",
+      "is-certifiable" :"Eligible for certification (Y/N)",
+      "is-sent": "Sent (Y/N)",
       "pix-score": "Total pix score",
       "sent-on": "Sent on",
       "skill-level": "Level reached in the skill {{name}}",
