--- a/api/translations/fr.json
+++ b/api/translations/fr.json
@@ -1,4 +1,53 @@
 {
+  "campaign-export": {
+    "assessment": {
+      "competence-area": {
+        "items-successfully-completed": "Acquis maitrisés du domaine {{name}}",
+        "mastery-percentage": "% de maitrise des acquis du domaine {{name}}",
+        "total-items": "Nombre d'acquis du profil cible du domaine {{name}}"
+      },
+      "is-shared": "Partage (O/N)",
+      "mastery-percentage-target-profile":"% maitrise de l'ensemble des acquis du profil",
+      "progress": "% de progression",
+      "shared-on": "Date du partage",
+      "started-on": "Date de début",
+      "target-profile-name": "Nom du Profil Cible",
+      "status": {
+        "ko": "KO",
+        "not-tested": "Non testé",
+        "ok": "OK"
+      },  
+      "skill": {
+        "items-successfully-completed": "Acquis maitrisés dans la compétence {{name}}",
+        "mastery-percentage": "% de maitrise des acquis de la compétence {{name}}",
+        "total-items": "Nombre d'acquis du profil cible dans la compétence {{name}}"
+      },
+      "success-rate": "Palier obtenu (/{{value}})",
+      "thematic-result-name": "{{name}} obtenu (O/N)"
+    },
+    "common" : {
+      "campaign-id": "ID Campagne",
+      "campaign-name": "Nom de la campagne",
+      "file-name": "Resultats-{{name}}-{{id}}-{{date}}.csv",
+      "no": "Non",
+      "not-available": "NA",
+      "organization-name": "Nom de l'organisation",
+      "participant-division": "Classe",
+      "participant-firstname": "Prénom du Participant",
+      "participant-lastname": "Nom du Participant",
+      "participant-student-number": "Numéro Étudiant",
+      "yes": "Oui"
+    },
+    "profiles-collection" : {
+      "certifiable-skills": "Nombre de compétences certifiables",
+      "is-certifiable" :"Certifiable (O/N)",
+      "is-sent": "Envoi (O/N)",
+      "pix-score": "Nombre de pix total",
+      "sent-on": "Date de l'envoi",
+      "skill-level": "Niveau pour la compétence {{name}}",
+      "skill-ranking": "Nombre de pix pour la compétence {{name}}"
+    }
+  },
   "current-lang": "fr",
   "campaign": {
     "common" : {
