--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -456,6 +456,13 @@
         "error": "Une erreur est survenue lors de la désactivation du membre."
       }
     },
+    "team-list": {
+      "title": "Mon équipe",
+      "add-member-button": "Inviter un membre",
+      "tabs": {
+        "member": "Membres"
+      }
+    },
     "team-members": {
       "table": {
         "column": {
