--- a/orga/translations/fr.json
+++ b/orga/translations/fr.json
@@ -297,7 +297,7 @@
       "waiting-results": "En attente de résultats"
     },
     "certifications": {
-      "description": "Sélectionnez la classe pour laquelle vous souhaitez exporter les résultats de certification au format csv.",
+      "description": "Sélectionnez la classe pour laquelle vous souhaitez exporter les résultats de certification au format csv.<br> Vous pouvez filtrer cette liste en renseignant le nom de la classe directement dans le champ.",
       "download-button": "Exporter les résultats",
       "select-label": "Classe",
       "title": "Certifications",
